--- a/index.html
+++ b/index.html
@@ -282,20 +282,18 @@ async function loadParts() {
 /* 입고 */
 async function savePart() {
 
-  const main = main_category.value;
-  const mid = mid_category.value;
-  const name = part_name.value;
-  const qty = Number(quantity.value);
-  const loc = location.value;
-  const noteText = note.value;
+  const main = document.getElementById("main_category").value;
+  const mid = document.getElementById("mid_category").value;
+  const name = document.getElementById("part_name").value;
+  const qty = Number(document.getElementById("quantity").value);
+  const loc = document.getElementById("location").value;
+  const noteText = document.getElementById("note").value;
 
   if (!main || !mid || !name || qty <= 0 || !loc) {
-
     alert("필수값 누락");
     return;
   }
 
-  /* ① 같은 예비품이 이미 있는지 조회 */
   const { data: existing } = await sb
     .from("spare_parts")
     .select("*")
@@ -304,15 +302,12 @@ async function savePart() {
     .eq("mid_category", mid)
     .maybeSingle();
 
-  /* ② 있으면 수량만 증가 */
   if (existing) {
-
-    const newQty = existing.quantity + qty;
 
     await sb
       .from("spare_parts")
       .update({
-        quantity: newQty,
+        quantity: existing.quantity + qty,
         location: loc,
         note: noteText
       })
@@ -320,7 +315,6 @@ async function savePart() {
 
   } else {
 
-    /* ③ 없으면 새로 생성 */
     await sb.from("spare_parts").insert([{
       main_category: main,
       mid_category: mid,
@@ -334,8 +328,8 @@ async function savePart() {
   alert("입고 완료");
   loadParts();
   loadOutParts();
-
 }
+
 
 /* 출고 목록 */
 async function loadOutParts() {
