--- a/index.html
+++ b/index.html
@@ -280,83 +280,105 @@ async function loadParts() {
 }
 
 /* 입고 */
-/* 입고 처리 (중복 합산 로직 추가) */
+/* 입고 저장 함수 (초보자용 안전 버전) */
 async function savePart() {
-  const row = {
-    main_category: main_category.value,
-    mid_category: mid_category.value,
-    part_name: part_name.value,
-    quantity: Number(quantity.value),
-    location: storage_location.value,
-    note: note.value
-  };
+  // 1. 입력값 가져오기 (trim()을 써서 앞뒤 불필요한 공백을 제거합니다)
+  const mCat = main_category.value;
+  const sCat = mid_category.value;
+  const pName = part_name.value.trim(); 
+  const qty = Number(quantity.value);
+  const loc = storage_location.value.trim();
+  const memo = note.value.trim();
 
-  if (!row.part_name || row.quantity <= 0) {
-    alert("품목명과 수량을 정확히 입력하세요.");
+  if (!pName || qty <= 0) {
+    alert("품목명과 수량을 정확히 입력해주세요.");
     return;
   }
 
-  // 1. 기존에 동일한 품목(대분류+중분류+품목명)이 있는지 확인
-  const { data: existingPart, error: searchError } = await sb
+  // 2. DB에서 똑같은 물건이 있는지 '검색' 먼저 하기
+  // 대분류, 중분류, 이름이 모두 똑같은 행이 있는지 찾아봅니다.
+  const { data: existingItem, error: searchError } = await sb
     .from("spare_parts")
     .select("*")
-    .eq("main_category", row.main_category)
-    .eq("mid_category", row.mid_category)
-    .eq("part_name", row.part_name)
-    .maybeSingle(); // 결과가 없어도 에러를 내지 않음
+    .eq("main_category", mCat)
+    .eq("mid_category", sCat)
+    .eq("part_name", pName)
+    .maybeSingle(); // 1개만 있거나 없거나
 
-  let targetId;
-  let finalQty = row.quantity;
+  if (searchError) {
+    console.error("검색 오류:", searchError);
+    return;
+  }
 
-  if (existingPart) {
-    // 2-1. 이미 있다면: 수량 합산 후 업데이트
-    targetId = existingPart.id;
-    finalQty = existingPart.quantity + row.quantity;
+  let finalPartId;
+
+  if (existingItem) {
+    // [경우 A] 이미 물건이 있다면? 수량을 더해줍니다.
+    const newTotalQty = existingItem.quantity + qty;
     
     const { error: updateError } = await sb
       .from("spare_parts")
       .update({ 
-        quantity: finalQty,
-        location: row.location, // 위치나 비고는 최신 데이터로 갱신
-        note: row.note 
+        quantity: newTotalQty, 
+        location: loc, 
+        note: memo 
       })
-      .eq("id", targetId);
+      .eq("id", existingItem.id);
 
-    if (updateError) return alert("수량 업데이트 실패: " + updateError.message);
+    if (updateError) {
+      alert("업데이트 실패: " + updateError.message);
+      return;
+    }
+    finalPartId = existingItem.id;
+    console.log("기존 항목에 합산 완료");
   } else {
-    // 2-2. 없다면: 신규 insert
-    const { data: newData, error: insertError } = await sb
+    // [경우 B] 똑같은 물건이 없다면? 새로 한 줄 만듭니다.
+    const { data: newItem, error: insertError } = await sb
       .from("spare_parts")
-      .insert([row])
+      .insert([{
+        main_category: mCat,
+        mid_category: sCat,
+        part_name: pName,
+        quantity: qty,
+        location: loc,
+        note: memo
+      }])
       .select()
       .single();
 
-    if (insertError) return alert("신규 등록 실패: " + insertError.message);
-    targetId = newData.id;
+    if (insertError) {
+      alert("신규 등록 실패: " + insertError.message);
+      return;
+    }
+    finalPartId = newItem.id;
+    console.log("새 항목으로 등록 완료");
   }
 
-  // 3. 로그 기록 (입고된 만큼만 기록)
+  // 3. 입고 로그 기록 (이건 합산과 상관없이 매번 기록남김)
   await sb.from("spare_parts_logs").insert([{
-    part_id: targetId,
+    part_id: finalPartId,
     type: "IN",
-    quantity: row.quantity, // 합산 수량이 아닌 '이번에 들어온 수량'만 기록
-    main_category: row.main_category,
-    mid_category: row.mid_category,
-    part_name: row.part_name,
-    note: row.note
+    quantity: qty,
+    main_category: mCat,
+    mid_category: sCat,
+    part_name: pName,
+    note: memo
   }]);
 
-  alert("입고 완료 (재고 반영됨)");
+  alert("처리되었습니다.");
   
-  // 입력창 초기화
+  // 입력창 청소
+  part_name.value = "";
   quantity.value = "";
   note.value = "";
   
+  // 목록 새로고침
   loadParts();
   loadOutParts();
   loadAllLogs();
 }
 
+  
 /* 출고 목록 */
 async function loadOutParts() {
   out_part_id.innerHTML = '<option value="">출고 예비품 선택</option>';
