--- a/index.html
+++ b/index.html
@@ -229,10 +229,9 @@ table {
     </thead>
     <tbody id="list"></tbody>
   </table>
-</div> ```
+</div>
 
-**[입·출고 통합 이력 부분 수정]**
-```html
+/* [입·출고 통합 이력 부분 수정] */
 <h3>입·출고 통합 이력</h3>
 <div class="table-wrapper"> <table>
     <thead>
