--- a/index.html
+++ b/index.html
@@ -128,27 +128,40 @@ tbody tr:hover {
     height: 60px;
   }
 
-  /* 테이블을 감싸는 박스에 스크롤 만들기 */
+  /* 1. 테이블을 감싸는 박스 설정 */
 .table-wrapper {
-  max-height: 600px;    /* 표의 최대 높이 (이 높이를 넘으면 스크롤이 생김) */
-  overflow-y: auto;     /* 세로 스크롤 활성화 */
+  max-height: 400px;
+  overflow-y: auto;
   border: 1px solid #e5e7eb;
   border-radius: 8px;
-  background: white;
-  margin-top: 10px;
+  position: relative; /* 고정 위치의 기준점이 됩니다 */
 }
 
-/* 테이블 헤더(제목줄) 고정 */
-.table-wrapper th {
-  position: sticky;
-  top: 0;
-  z-index: 10;
-  background: #f3f4f6;  /* 스크롤 내려도 제목줄 배경색 유지 */
-}
-
-/* 기존 table 태그의 마진 삭제 (감싸는 박스가 대신 여백을 가짐) */
+/* 2. 테이블 설정 */
 table {
-  margin-top: 0 !important;
+  width: 100%;
+  border-collapse: separate; /* 중요: 테두리가 겹치지 않게 해야 고정이 잘 됩니다 */
+  border-spacing: 0;
+}
+
+/* 3. 첫 행(th) 고정 설정 (엑셀의 틀 고정) */
+th {
+  position: sticky;
+  top: 0;            /* 맨 위에 고정 */
+  background: #f3f4f6; /* 배경색이 있어야 아래 데이터가 비치지 않습니다 */
+  z-index: 10;       /* 데이터보다 위에 보이게 설정 */
+  border-bottom: 2px solid #d1d5db; /* 고정된 경계선 강조 */
+  padding: 12px 10px;
+}
+
+/* 4. 테이블 셀 테두리 정리 */
+th, td {
+  border-bottom: 1px solid #e5e7eb;
+  border-right: 1px solid #e5e7eb;
+}
+
+th:last-child, td:last-child {
+  border-right: none; /* 마지막 칸은 오른쪽 테두리 제거 */
 }
   
     /* ===== 입·출고 색상 ===== */
